XD-902 Fix view schema button overlap issue in table preview

--- a/assets/stylesheets/less/partials/datastore.less
+++ b/assets/stylesheets/less/partials/datastore.less
@@ -402,6 +402,7 @@ html.safari {
         .infoSection {
             > span {
                 margin-right: 4px;
+                float: left;
 
                 &.label {
                     font-weight: 600;
@@ -412,7 +413,7 @@ html.safari {
                 }
 
                 &.action {
-                    .position(absolute, @right: 20px);
+                    float: right;
                     text-decoration: underline;
                     color: @color-bg-cardHeader;
                 }
